--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
 
+    
+<h1>itsaTitleBitch</h1>
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis corporis sunt dolorem sed corrupti veniam saepe doloremque consequuntur! Aliquid, cumque? Ipsam nemo temporibus ducimus sequi odio at blanditiis quas hic.</p>
+
+<script>
+'use strict'
+
+let todayString = 'sunday'
+document.write(todayString)
+console.log(todayString)
+
+let parameterOne 
+parameterOne = 7
+
+function outNumberInAlert(parameterOne) {
+    window.alert(parameterOne)
+}
+
+outNumberInAlert(31253151)
+
+console.log(todayString)
+console.log(todayString)
+console.log(todayString)
+console.log(parameterOne)
+</script>
+</body>
+</html>
